expected/main/lc/if-exprs-illegal2.err
ERROR: "actual/main/lc/if-exprs-illegal2.llc", line 4
  cand2 x y = if x else if y else 3
                   ^
missing "then" branch

ERROR: "actual/main/lc/if-exprs-illegal2.llc", line 4
  cand2 x y = if x else if y else 3
                   ^
Trailing token(s) ("else" keyword) at end of input

ERROR: Aborting after 2 previously reported errors

